stylesheets/landing.css
/* ... */
/* line 159, /Users/luiskhernandez/CodeKilla/null/wapa-home/source/stylesheets/jquery.bxslider.css */
.bx-wrapper .bx-controls-auto .bx-stop {
  display: block;
  text-indent: -9999px;
  width: 9px;
  height: 11px;
  outline: 0;
  background: url(images/controls.png) -86px -44px no-repeat;
  margin: 0 3px; }

/* line 169, /Users/luiskhernandez/CodeKilla/null/wapa-home/source/stylesheets/jquery.bxslider.css */
.bx-wrapper .bx-controls-auto .bx-stop:hover,
.bx-wrapper .bx-controls-auto .bx-stop.active {
  background-position: -86px -33px; }

/* PAGER WITH AUTO-CONTROLS HYBRID LAYOUT */
/* line 176, /Users/luiskhernandez/CodeKilla/null/wapa-home/source/stylesheets/jquery.bxslider.css */
.bx-wrapper .bx-controls.bx-has-controls-auto.bx-has-pager .bx-pager {
  text-align: left;
  width: 80%; }

/* line 181, /Users/luiskhernandez/CodeKilla/null/wapa-home/source/stylesheets/jquery.bxslider.css */
.bx-wrapper .bx-controls.bx-has-controls-auto.bx-has-pager .bx-controls-auto {
  right: 0;
  width: 35px; }

/* IMAGE CAPTIONS */
/* line 188, /Users/luiskhernandez/CodeKilla/null/wapa-home/source/stylesheets/jquery.bxslider.css */
.bx-wrapper .bx-caption {
  position: absolute;
  bottom: 0;
  left: 0;
  background: #666 \9;
  background: rgba(80, 80, 80, 0.75);
  width: 100%; }

/* line 197, /Users/luiskhernandez/CodeKilla/null/wapa-home/source/stylesheets/jquery.bxslider.css */
.bx-wrapper .bx-caption span {
  color: #fff;
  font-family: Arial;
  display: block;
  font-size: .85em;
  padding: 10px; }

.slide-app{
  padding-bottom: 180px !important;
}
.slide-app .grid__item{
  left:0;
  top:50px;
}

.grid__beauty-items{
  left: 0;
  padding-left: 2%;
}

.grid__beauty-items img{
  width: 80%;
  margin: 0 auto;
  display: block;
}

.grid__icons-steps{
  padding-left: 0;
}

.grid__book-salon{
  padding: 0 20px;
}

.grid__maps-app img{
  width: 91%;
}

@media only screen and (max-width: 1370px){
  .slide__width{
    width: 1373px;
    margin: 0 auto;
    left: calc(50% - 674px) !important;
  }
}

@media (min-width: 722px) and (max-width: 958px){
  .grid__beauty-items img{
    margin-top: 40px;
  }
}

@media only screen and (max-width: 960px){
 .box--pink .grid__item{
   left: 2%;
 }
  .arrow--right{
    right: 22px;
  }
}

@media only screen and (max-width: 960px){
  .avatar-img{
    width: 75%;
  }
  .map-img{
    width: 75%;
  }
  .three-fifths{
    width: 50%;
  }
  .box--grid{
    width: 78%;
  }
}

@media only screen and (max-width: 860px){
  .img-phones{
    width: 50%;
    right: 15px;
    min-width: 270px;
  }
  .one-quarter{
    width: 50%;
    margin-bottom: 35px;
  }
  .box--pink .box--quarter{
    width: 75%;
  }
  .arrow--hidden{
    display: none;
  }
  .arrow--right{
    right: 42px;
  }
  .box--pink{
    padding-bottom: 60px !important;
  }
}

@media only screen and (max-width: 720px){
  .soft-quintuple--ends{
    padding-top: 0 !important;
  }
  .box--main{
    height: 500px;
  }
  .three-fifths{
    width: 100%;
  }
  .two-fifths{
    width: 330px;
    margin: 30px auto;
    display: block;
  }
  .img-phones{
    position: static;
    margin: 0 auto;
  }
  .box--grid{
    margin: 0 auto;
  }
  .arrow--right{
    right: 8%;
  }
  .box--pink .grid{
    margin-left: -15px;
    padding-top: 100px;
  }
  .box--pink .grid .grid__item > .grid{
    padding-top: 0;
  }
  .slide-app .grid{
    padding-top: 60px;
  }
}

@media only screen and (max-width: 550px){
  footer .list--horizontal{
    margin: 0 auto;
    display: block;
    width: 331px;
    margin-bottom: 20px;
  }
  footer .float--left{
    width: 100%;
    text-align: center;
  }
  footer .float--right{
    width: 100%;
  }
}

.bx-viewport{
  top: -2px;
  margin: 0 auto;
}

@media only screen and (max-width: 500px){
  footer {
    margin-top: 121px;
  }
}

@media only screen and (max-width: 395px){
  .list--horizontal{
    width: 273px!important;
    margin-left: 0!important;
    padding: 0 !important;
    margin: 0 auto !important;
    margin-bottom: 20px!important;
  }
}

@media only screen and (max-width: 340px){
  .arrow--right{
    right: 0;
  }
}

